ai-telemetry/base/aitelemetry/site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aitelemetry-site
spec:
  replicas: 3
  revisionHistoryLimit: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
  template:
    spec:
      containers:
        - name: aitelemetry
          image: 'quay.io/computate/ai-telemetry:computate'
          imagePullPolicy: Always
          ports:
            - containerPort: 10210
              name: http
              protocol: TCP
            - containerPort: 10211
              name: cluster
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 'http'
            timeoutSeconds: 10
            failureThreshold: 10
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 'http'
            timeoutSeconds: 10
            failureThreshold: 10
          resources:
            requests:
              cpu: '500m'
              memory: '500Mi'
            limits:
              cpu: '1'
              memory: '2Gi'
