ai-telemetry/base/aitelemetry/site/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: aitelemetry-site
spec:
  host: REPLACE_IN_OVERLAY
  port:
    targetPort: http
  to:
    kind: Service
    name: aitelemetry-site
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
